// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Leaderboard > should render Leaderboard excluding the podium 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="column"
    >
      <div
        class="position"
      >
        <span>
          4
        </span>
      </div>
    </div>
    <div
      class="column"
    >
      WhiskerFox
    </div>
    <div
      class="column"
    >
      <span
        class="score"
      >
        14118
      </span>
    </div>
    <div
      class="column"
    >
      <div
        class="position"
      >
        <span>
          5
        </span>
      </div>
    </div>
    <div
      class="column"
    >
      JollyNimbus
    </div>
    <div
      class="column"
    >
      <span
        class="score"
      >
        13463
      </span>
    </div>
    <div
      class="column"
    >
      <div
        class="position"
      >
        <span>
          6
        </span>
      </div>
    </div>
    <div
      class="column"
    >
      PuddingPop
    </div>
    <div
      class="column"
    >
      <span
        class="score"
      >
        12459
      </span>
    </div>
    <div
      class="column"
    >
      <div
        class="position"
      >
        <span>
          7
        </span>
      </div>
    </div>
    <div
      class="column"
    >
      MysticPine
    </div>
    <div
      class="column"
    >
      <span
        class="score"
      >
        11086
      </span>
    </div>
    <div
      class="column"
    >
      <div
        class="position"
      >
        <span>
          8
        </span>
      </div>
    </div>
    <div
      class="column"
    >
      FrostyBear
    </div>
    <div
      class="column"
    >
      <span
        class="score"
      >
        10361
      </span>
    </div>
    <div
      class="column"
    >
      <div
        class="position"
      >
        <span>
          9
        </span>
      </div>
    </div>
    <div
      class="column"
    >
      Willo
    </div>
    <div
      class="column"
    >
      <span
        class="score"
      >
        9360
      </span>
    </div>
    <div
      class="column"
    >
      <div
        class="position"
      >
        <span>
          10
        </span>
      </div>
    </div>
    <div
      class="column"
    >
      ScarletFlame
    </div>
    <div
      class="column"
    >
      <span
        class="score"
      >
        6723
      </span>
    </div>
  </div>
</div>
`;

exports[`Leaderboard > should render Leaderboard including the podium 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="column podium"
    >
      <div
        class="position"
      >
        <span>
          1
        </span>
      </div>
    </div>
    <div
      class="column podium"
    >
      ShadowCyborg
    </div>
    <div
      class="column podium"
    >
      <span
        class="score"
      >
        18456
      </span>
    </div>
    <div
      class="column podium"
    >
      <div
        class="position"
      >
        <span>
          2
        </span>
      </div>
    </div>
    <div
      class="column podium"
    >
      Radar
    </div>
    <div
      class="column podium"
    >
      <span
        class="score"
      >
        18398
      </span>
    </div>
    <div
      class="column podium"
    >
      <div
        class="position"
      >
        <span>
          3
        </span>
      </div>
    </div>
    <div
      class="column podium"
    >
      ShadowWhirlwind
    </div>
    <div
      class="column podium"
    >
      <span
        class="score"
      >
        15492
      </span>
    </div>
    <div
      class="column podium"
    >
      <div
        class="position"
      >
        <span>
          4
        </span>
      </div>
    </div>
    <div
      class="column podium"
    >
      WhiskerFox
    </div>
    <div
      class="column podium"
    >
      <span
        class="score"
      >
        14118
      </span>
    </div>
    <div
      class="column podium"
    >
      <div
        class="position"
      >
        <span>
          5
        </span>
      </div>
    </div>
    <div
      class="column podium"
    >
      JollyNimbus
    </div>
    <div
      class="column podium"
    >
      <span
        class="score"
      >
        13463
      </span>
    </div>
    <div
      class="column podium"
    >
      <div
        class="position"
      >
        <span>
          6
        </span>
      </div>
    </div>
    <div
      class="column podium"
    >
      PuddingPop
    </div>
    <div
      class="column podium"
    >
      <span
        class="score"
      >
        12459
      </span>
    </div>
    <div
      class="column podium"
    >
      <div
        class="position"
      >
        <span>
          7
        </span>
      </div>
    </div>
    <div
      class="column podium"
    >
      MysticPine
    </div>
    <div
      class="column podium"
    >
      <span
        class="score"
      >
        11086
      </span>
    </div>
    <div
      class="column podium"
    >
      <div
        class="position"
      >
        <span>
          8
        </span>
      </div>
    </div>
    <div
      class="column podium"
    >
      FrostyBear
    </div>
    <div
      class="column podium"
    >
      <span
        class="score"
      >
        10361
      </span>
    </div>
    <div
      class="column podium"
    >
      <div
        class="position"
      >
        <span>
          9
        </span>
      </div>
    </div>
    <div
      class="column podium"
    >
      Willo
    </div>
    <div
      class="column podium"
    >
      <span
        class="score"
      >
        9360
      </span>
    </div>
    <div
      class="column podium"
    >
      <div
        class="position"
      >
        <span>
          10
        </span>
      </div>
    </div>
    <div
      class="column podium"
    >
      ScarletFlame
    </div>
    <div
      class="column podium"
    >
      <span
        class="score"
      >
        6723
      </span>
    </div>
  </div>
</div>
`;
